[package]
name = "rogue-tiny"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["bevy_roguelike_plugin/debug", "bevy-inspector-egui"]

[dependencies]
bevy_roguelike_plugin = { path = "bevy_roguelike_plugin" }
bevy_inventory_ui = { path = "bevy_inventory_ui" }
bevy-inspector-egui = { version = "~0.11", optional = true }

[dependencies.bevy]
version = "~0.7"
default-features = false
features = ["render", "bevy_winit", "png"]

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "~0.7"
default-features = false
features = ["x11"]

[workspace]
members = [
    "bevy_roguelike_plugin",
    "bevy_roguelike_combat",
    "map_generator",
    "bevy_inventory",
    "bevy_inventory_ui",
    "vec_walk_dir",
]

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
# [profile.dev]
# opt-level = 1
