[workspace]
members = [
    "game",
    "bevy_roguelike_plugin",
    "bevy_roguelike_combat",
    "map_generator",
    "bevy_inventory",
    "bevy_inventory_ui",
    "vec_walk_dir",
]

resolver = "2"

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
# [profile.dev]
# opt-level = 1
