[package]
name = "bevy_roguelike_combat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
rand = "0.8"
strum = "0.26"
bevy_roguelike_states = { path = "../bevy_roguelike_states" }

[dependencies.bevy]
version = "0.13.2"
default-features = false
features = ["bevy_render"]

# Dependencies for WASM only
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2"
features = ["js"]
