[package]
name = "bevy_roguelike_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["colored", "bevy-inspector-egui"]

[dependencies]
bevy_easings = "~0.7"
line_drawing = "~1.0"
rand = "~0.8"
serde = "~1.0"
bevy-inspector-egui = { version = "~0.10", optional = true }
colored = { version = "~2.0", optional = true }

[dependencies.bevy]
version = "~0.7"
default-features = false
features = ["render"]

# Dependencies for WASM only
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2"
features = ["js"]
