[package]
name = "bevy_roguelike_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["colored"]

[dependencies]
vec_walk_dir = { path = "../vec_walk_dir" }
bevy_roguelike_states = { path = "../bevy_roguelike_states" }
bevy_roguelike_combat = { path = "../bevy_roguelike_combat" }
map_generator = { path = "../map_generator" }
bevy_inventory = { path = "../bevy_inventory" }
bevy_inventory_ui = { path = "../bevy_inventory_ui" }
bevy_tweening = "0.10"
bevy_common_assets = { version = "0.10", features = ["ron"] }
line_drawing = "1.0"
rand = "0.8"
serde = "1.0"
ron = "0.8"
strum = "0.26"
strum_macros = "0.26"
colored = { version = "2.0", optional = true }

[dependencies.bevy]
version = "0.13.2"
default-features = false
features = ["bevy_render", "bevy_core_pipeline"]

# Dependencies for WASM only
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2"
features = ["js"]
